src/test/ui/borrowck/borrowck-closures-unique-imm.stderr
error[E0502]: cannot borrow `this.x` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-closures-unique-imm.rs:11:14
   |
LL |         let p = &this.x;
   |                  ------ immutable borrow occurs here
LL |         &mut this.x;
   |              ^^^^^^ mutable borrow occurs here
LL |         p.use_ref();
LL |     };
   |     - immutable borrow ends here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0502`.
